Update initialization flow and docker compose (#41)
